# aml-copilot

./: .claudeignore  .env.example  .gitignore  .make-cheatsheet  AGENT_FLOW.md  API_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENV_CONFIGURATION_GUIDE.md  FINAL_TODO.md  IMPLEMENTATION_PLAN.md  INTENT_MAPPER_IMPROVEMENTS.md  LANGGRAPH_MEMORY_ANALYSIS.md  MAKEFILE_GUIDE.md  Makefile  Notes.md  PHASE2_TEST_RESULTS.md  PHASE3_TEST_RESULTS.md  POTENTIAL_IMPROVEMENTS.md  QUICK_START.md  README.md  REDIS_SESSION_SOLUTION.md  REVIEW_SYSTEM_CONFIG_FIX.md  SESSION_CONTINUATION.md  TESTING_SETUP_SUMMARY.md  TEST_RESULTS.md  claude.md  docker-compose.yml  objective.md  pyproject.toml  run_tests.py  run_tests_phase2.py  run_tests_phase3.py
.claude/: claude.md
agents/: __init__.py  base_agent.py  compliance_expert.py  coordinator.py  copilot.py  data_retrieval.py  graph.py  intent_mapper.py  prompts.py  review_agent.py  state.py
api/: __init__.py  main.py  models.py
config/: agent_config.py  settings.py
counterparty/: README.md  __init__.py  batch_compute.py  cache.py  compute.py  counterparty_graph.py  graph.py  models.py  viz.py
data/: feature_catalog.json  mock_data.py  schema.sql
db/: manager.py
docs/: AGENT_ARCHITECTURE_REVISED.md  AGENT_REFACTORING_COMPLETE.md  CONVERSATION_HISTORY_FIX.md  IMPLEMENTATION_CHECKLIST.md  PLACEHOLDER_CONTENT_TRACKER.md  SESSION_TESTING_FRAMEWORK_COMPLETE.md  TESTING_STRATEGY.md
evaluation/: README.md  TEST_TYPES_OVERVIEW.md  config.py  models.py  test_runner.py
examples/: run_evaluation.py
middleware/: __init__.py  aml_compliance_middleware.py  base.py  cost_tracking_middleware.py  logging_middleware.py  registry.py
migrations/: env.py
misc/: aml_system_complete_spec (1).md  counterparty_graph_compute.py  counterparty_graph_viz.py
notebooks/: README.md  agent_evaluation_demo.ipynb  test_plan.md  (+4 more)
(+128 files in other folders)
